# ESP32-smarthome-sample-app

./: .cproject  .project  README.md  sdkconfig
main/: CMakeLists.txt  http_server.c  http_server.h  tasks_common.h  wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  index.html
